# GameVault-Public

./: .gitignore  CMakeLists.txt  README.md  core_var.cpp  icon.rc  launcher.cpp  startgame.cpp  theme.cpp
Shrink_Shot/: CMakelists.txt  shrinkshot.cpp
build_resources/: icon.rc
cmake/: dependencies.cmake
include/: core_var.hpp  startgame.hpp  theme.hpp
multiplayer/: CMakelists.txt  Gameserver.hpp  ball.hpp  client.hpp  clientpaddle.cpp  clientpaddle.hpp  gameclient.cpp  gamelogic.hpp  gameserver.cpp
pingpong/: CMakelists.txt  ping_pong.cpp
snake/: CMakelists.txt  game.cpp  game.hpp  snake.cpp
space_invaders/: CMakelists.txt  alien.cpp  button.cpp  button.hpp  game.cpp  main.cpp  mysteryship.cpp  spaceship.cpp  starting.cpp
